--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   width: 100%;
   color: #f36653;
   background-color: #1f1c3d;
+  font-family: 'Montserrat', sans-serif;
 }
 .container {
   display: flex;
@@ -16,6 +17,65 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
+}
+.container button {
+  outline: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  transition: all 0.3s ease;
+}
+.container button:hover {
+  transform: scale(1.05) rotate(90deg);
+}
+.container button:active {
+  transform: scale(1.15) rotate(90deg);
+}
+.container .modal {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0) translateX(-30rem) translateY(10rem);
+  transition: all 0.3s ease;
+  color: #2e295a;
+  background: #f36653;
+  padding: 2rem;
+  border: 4px solid rgba(241,75,53,0.85);
+}
+.container .modal.active {
+  top: 7rem;
+  transform: scale(1) translateX(0) translateY(0);
+  opacity: 1;
+  visibility: visible;
+}
+.container .modal fieldset {
+  padding: 0.8rem 1rem;
+  border-color: rgba(241,75,53,0.85);
+}
+.container .modal fieldset legend {
+  font-weight: bold;
+  letter-spacing: 0.2rem;
+  font-size: 1.3rem;
+  padding: 0.2rem 0.8rem;
+  text-transform: capitalize;
+  background-color: #f36653;
+}
+.container .modal fieldset label {
+  text-transform: uppercase;
+}
+.container .modal fieldset label:nth-of-type(1) {
+  margin-right: 10px;
+}
+.container .modal fieldset input:checked + label {
+  font-weight: bold;
 }
 .container .grid {
   display: grid;
@@ -28,25 +88,26 @@ body {
   border: 4px solid #f36653;
   font-size: 5rem;
   font-family: 'Source Code Pro', monospace;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  line-height: 80px;
+  text-transform: lowercase;
 }
 .container .grid .square.empty {
   cursor: pointer;
-  transition: background 0.2s ease;
+  transition: all 0.2s ease;
 }
 .container .grid .square.empty:hover {
   background: #2e295a;
 }
-.container h2 {
+.container h1 {
   opacity: 0;
   visibility: hidden;
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   text-transform: uppercase;
+  transition: all 0.3s ease;
 }
-.container h2.result {
+.container h1.result {
   opacity: 1;
   visibility: visible;
 }
