--- a/style.styl
+++ b/style.styl
@@ -15,15 +15,87 @@ body
     min-height 100vh
     width 100%
     color color-grid-header
-    background-color color-background    
+    background-color color-background   
+    font-family font-header 
 
 .container 
-    // center the grid and header in the page, lay them in a single column layout
+    // center the grid and header in the page, laying them in a single column layout
     display flex 
     height 100vh 
     justify-content center 
     align-items center 
     flex-direction column 
+    // position relative to absolute position the button and settings' panel
+    position relative
+
+    button 
+        // include a small reset style for the button
+        outline none 
+        border none 
+        background none 
+        cursor pointer 
+
+        // position the button in the top right of the screen
+        position absolute 
+        top 2rem 
+        right 2rem
+
+        // remember the height of the button as the settings' panel needs to be displayed right beneath the button itself
+        width 3.5rem
+        height 3.5rem
+        // transition for hover and active states
+        transition all 0.3s ease
+
+        &:hover
+            transform scale(1.05) rotate(90deg)
+        &:active
+            transform scale(1.15) rotate(90deg)
+
+    .modal 
+        // position the modal in the top right corner, but hide it from view
+        position absolute 
+        top 2rem 
+        right 2rem 
+        opacity 0
+        visibility hidden
+        transform scale(0) translateX(-30rem) translateY(10rem)
+        // transition for the change of properties which occurs when a class is added/removed from the div
+        transition all 0.3s ease
+
+        color lighten(color-background, 10%)
+        background color-grid-header
+        padding 2rem        
+        border 4px solid rgba(darken(color-grid-header, 10%), 0.85)        
+
+        &.active
+            // through the class of .active, toggled with JS at the click of connected button, transition the panel into view in a swoshing animation
+            // visually, the mix of vertical and horizontal translation, together with the change in scale, allows the panel to be brough into view almost with a curve 
+            top 7rem
+            transform scale(1) translateX(0) translateY(0)
+            opacity 1
+            visibility visible
+            
+        fieldset
+            padding 0.8rem 1rem
+            border-color rgba(darken(color-grid-header, 10%), 0.85)
+
+            legend
+                font-weight bold 
+                letter-spacing 0.2rem           
+                font-size 1.3rem
+                padding 0.2rem 0.8rem
+                text-transform capitalize 
+                background-color color-grid-header
+
+            label 
+                text-transform uppercase
+
+                &:nth-of-type(1)
+                    margin-right 10px
+
+            input:checked + label 
+                // style the selected option with a bolder label
+                font-weight bold
 
     .grid
         // create a 3x3 grid with 100px squares
@@ -38,24 +110,27 @@ body
             font-size 5rem 
             font-family font-grid
             // center the content inside the square
-            display flex 
-            justify-content center 
-            align-items center            
-
+            text-align center
+            line-height 80px
+            text-transform lowercase            
+            
             &.empty
                 // when empty, add cursor pointer and a hover state
                 cursor pointer
-                transition background 0.2s ease
+                transition all 0.2s ease
+
                 &:hover
                     background lighten(color-background, 10%)
 
-    h2 
+    h1 
         // hide the header by default, show it when a result is achieved in the game by applying a class
         opacity 0
         visibility hidden 
         font-family font-header
         font-size 2.5rem
         text-transform uppercase
+        // transition for the change in opacity
+        transition all 0.3s ease
         
         &.result
             opacity 1
